--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -185,6 +185,10 @@
 		Russian:"Мы обнаружили город-государство [name]!"
 	}
 	
+	"We have encountered [civName]!":{
+		Simplified_Chinese:"我们遇到了文明--[civName]！"
+	}
+
 	// Friendship declaration flavor texts
 	"Declare Friendship ([numberOfTurns] turns)":{
 		Italian:"Dichiarazione di Amicizia ([numberOfTurns] turni)"
@@ -755,6 +759,7 @@
 
 	"Introduction to [nation]":{
 		Italian:"Introduci a [nation]"
+		Simplified_Chinese:"介绍认识[nation]"
 	}
 
 	"Luxury resources":{
@@ -1339,17 +1344,6 @@
 		French:"Promotions"
 		Portuguese:"Promoções"
 		Russian:"Повышения"
-	}
-	
-	"units in rough terrain":{
-		Italian:"unità su terreno accidentato"
-		Romanian:"unități în teren accidentat"
-		Spanish:"unidades en terreno accidentado"
-		Simplified_Chinese:"位于复杂地形的单位"
-		German:"Einheiten in unwegsamem Gelände"
-		French:"unités en terrain accidenté"
-		Portuguese:"unidades em terreno acidentado"
-		Russian:"юниты на пересеченной местности"
 	}
 	
 	"Barbarians":{
