--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -128,7 +128,7 @@
 		Russian:"Юниты в городах содержатся бесплатно, гарнизонный город + 50% силы атаки"
 		Romanian:"Unitățile din orașe nu necesită costuri de întreținere, orașul înarmat + 50% atac"
 		Spanish:"Unidades en las ciudades no cuestan mantenimiento, y +50% de fuerza de ataque"
-		Simplified_Chinese:"镇守城市的单位无需维护费，有单位镇守的城市+50%远程攻击力"
+		Simplified_Chinese:"镇守城市的单位无需维护费，有单位镇守的城市+50%远程战斗力"
 		Portuguese:"Unidades em cidades não custam manutenção, +50% de força de ataque"
 		German:"Einheiten in Städten Kosten keinen Unterhalt, +50% Angriffsstärke"
 		French:"Les unités en garnison n'ont plus de coût d'entretien, +50% de la force d'attaque"
