--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -298,7 +298,7 @@
 		German:"Kostenloser Solzialgrundsatz"
 		Dutch:"Gratis sociaalbeleid"
 		Spanish:"Política social gratis"
-		Simplified_Chinese:"获得1次免费推行社会政策的机会"
+		Simplified_Chinese:"可免费推行1项社会政策"
 		Portuguese:"Politica social gratis"
 		Polish:"Darmowy ustrój społeczny"
 	}
