delete english selectlanguage becauce menu have two choice, enlarge overview's image icon because it's too small to align.

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -574,7 +574,7 @@
 		French:"À quoi pensez-vous?"
 		Romanian:"La ce te gândești?"
 		Spanish:"¿Qué tienes en mente?"
-		Simplified_Chinese:"你有什么想法?"
+		Simplified_Chinese:"你有什么想法？"
 		Portuguese:"O que tens em mente?" //tens as in have or has nor tens of thousands of course
 		German:"Was schwebt Ihnen vor?"
 	}
