--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -895,7 +895,7 @@
 		Romanian:"Cine poate ști ce ne rezervă viitorul?"
 		Dutch:"Wie weet wat de toekomst inhoud?"
 		Spanish:"¿Quién sabe qué nos depara el futuro?"
-		Simplified_Chinese:"谁知道未来会怎样?"
+		Simplified_Chinese:"谁知道未来会怎样？"
 		Portuguese:"Quem sabe o que o futuro reserva?"
 		German:"Wer weiß was die Zukunft für uns bereithält?"
 	}
