language polish is wrong to be writing "polski"

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1329,7 +1329,7 @@
 		Italian:"+25% efficacia delle strutture difensive in tutte le città"
 		Simplified_Chinese:"所有城市防御建筑建造速度+25%"
 		French:"Les batiments de défense sont 25% plus efficace dans toutes les villes"
-		Polski:"+25% skuteczności budowli obronnych w miastach"
+		Polish:"+25% skuteczności budowli obronnych w miastach"
 		Russian:"Защитные сооружения во всех городах на 25% эффективнее"
 	}
 	
