Update Units,Promotions.json (#1061)
* Update Units,Promotions.json

Missing Italian Translation, and I think I accidentally deleted the Spanish translation for Turtle Ship

* Update Units,Promotions.json

--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -671,7 +671,8 @@
 	}
 
 	"Turtle Ship":{
-		Spanish:"Nave tartaruga"
+		Italian:"Nave tartaruga"
+		Spanish:"Nave tartaruga"//Should be "Barco tortuga"
 		Simplified_Chinese:"龟船"
 		Russian:"Кобуксон"
 	}
