--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -103,7 +103,7 @@
 		German:"[cityName] wurde gegründet!"
 		Dutch:"[cityName] is gesticht!"
 		Spanish:"¡[cityName] ha sido fundada!"
-		Simplified_Chinese:"[cityName]被发现!"
+		Simplified_Chinese:"已经建立了城市--[cityName]!"
 		Portuguese:"[cityName] foi fundada!"
 		Japanese:"[cityName]が設立されました！"
 	}
