--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -45,7 +45,7 @@
 		German:"in"
 		Dutch:"in"
 		Spanish:"en"
-		Simplified_Chinese:"建造/组建完成还需"
+		Simplified_Chinese:"建造/组建完成需"
 		Portuguese:"em"
 		Japanese:"に"
 	}
