--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -439,6 +439,12 @@
 		German:"Schwertkämpfer"
 	}
 	
+	"Mohawk Warrior":{
+	}
+	
+	"+33% combat bonus in Forest/Jungle":{
+	}
+	
 	"Legion":{
 		Italian:"Legionario"
 		Romanian:"Legionar"
