--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -383,9 +383,11 @@
 	}
 	
 	"Immortal":{ // Persian unique
+		Italian:"Immortale"
 	}
 	
 	"+10 HP when healing":{
+		Italian:"+10 PF quando si cura"
 	}
 	
 ////// Classical Era Units
@@ -446,9 +448,11 @@
 	}
 	
 	"Mohawk Warrior":{
+		Italian:"Guerriero Mohawk"
 	}
 	
 	"+33% combat bonus in Forest/Jungle":{
+		Italian:"+33% Forza su Foreste o Giungle"
 	}
 	
 	"Legion":{
